docs/1.7/TokenReview.md
# TokenReview

* [write operations](#write)

## write

### apis.authentication.k8s.io.v1beta1.tokenreviews.post

create a TokenReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authentication.v1beta1.TokenReview |

### apis.authentication.k8s.io.v1.tokenreviews.post

create a TokenReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authentication.v1.TokenReview |

